<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background_color"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/padding_15"
            android:paddingBottom="@dimen/padding_15"
            android:text="@string/set_target"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_20"
                android:layout_weight="1"
                android:background="@drawable/dialog_deny"
                android:gravity="center"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:text="@string/tt_cancel"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_20"
                android:layout_weight="1"
                android:background="@drawable/dialog_auth"
                android:gravity="center"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:text="@string/dialog_ok"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>