<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/common_title_layout"/>
    <LinearLayout
        android:id="@+id/balance_card"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="24dp"
        android:background="@drawable/bg_wallet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/current_coin"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10000金币"/>
            <TextView
                android:gravity="center"
                android:alpha="0.8"
                android:text="@string/current_coin"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/current_money"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1.0元"/>
            <TextView
                android:gravity="center"
                android:alpha="0.8"
                android:text="@string/current_money"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_marginLeft="@dimen/padding_40"
        android:layout_marginRight="@dimen/padding_40"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:paddingLeft="@dimen/padding_40"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_10"
        android:text="@string/get_money_num"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_30"
            android:text="¥"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/get_money_number"
            android:background="@color/transparent"
            android:padding="@dimen/padding_10"
            android:inputType="number"
            android:hint="请输入提现金额"
            android:textColorHint="@color/gray"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/get_all_money"
            android:gravity="center"
            android:text="@string/get_all_money_num"
            android:background="@drawable/common_tab"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingTop="@dimen/padding_5"
            android:paddingBottom="@dimen/padding_5"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/get_money"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/padding_20"
        android:layout_marginLeft="@dimen/padding_20"
        android:text="@string/get_money"
        android:layout_marginTop="@dimen/padding_10"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:paddingTop="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_10"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/get_money"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="@dimen/padding_10"
        android:textColor="@color/gray"
        android:text="@string/get_money_num_title"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="@dimen/padding_3"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginRight="@dimen/padding_10"
        android:textColor="@color/gray"
        android:layout_gravity="center"
        android:text="@string/get_money_num_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="@dimen/padding_10"
        android:layout_gravity="center_horizontal"
        android:text="提现记录"
        android:textColor="#3E3C3B"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.dn.sports.view.OverScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#F8F8F8"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/date"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_10"
                android:text="日期"
                android:textColor="#898E94"
                android:textSize="13sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/money"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_10"
                android:text="奖励"
                android:textColor="#898E94"
                android:textSize="13sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/list_record"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>
    </com.dn.sports.view.OverScrollView>
</LinearLayout>