<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical"
    android:background="#fbfbfb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/common_title_layout"/>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.dn.sports.view.CicleView
                android:layout_gravity="center"
                android:padding="@dimen/padding_50"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/now_target_steps"
                    android:text="6000"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/set_step_target"
                    android:text="@string/set_target"
                    android:textColor="@color/app_common_color"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </com.dn.sports.view.CicleView>

            <TextView
                android:text="@string/suggest_step_num"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/get_target_reward"
                android:text="尚未达成目标，继续加油！"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/app_common_color"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:paddingRight="@dimen/padding_30"
                android:paddingLeft="@dimen/padding_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/step_number_record"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:background="@drawable/common_tab_main_color"
                android:layout_margin="@dimen/padding_10"
                android:layout_marginBottom="@dimen/padding_20"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="240dp">
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:id="@+id/today_current_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.dn.sports.view.SunLineChartView
                    android:id="@+id/lineView"
                    android:layout_margin="@dimen/padding_10"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>